# ChangeLog for x11-libs/qt-opengl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Jun 2009; Dror Levin <spatz@psybear.com> -qt-opengl-4.5.2.ebuild:
  Moved to tree.

  26 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-opengl-4.5.9999.ebuild,
  qt-opengl-4.9999.ebuild:
  Propagate previous changeset to live ebuilds.

  25 Jun 2009; Davide Pesavento <davidepesa@gmail.com>
  qt-opengl-4.5.2.ebuild:
  Drop redundant IUSE defaults

*qt-opengl-4.5.2 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-opengl-4.5.2.ebuild:
  Version bump to 4.5.2

  29 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-opengl-4.5.1.ebuild:
  Remove 4.5.1. On tree now

*qt-opengl-4.5.1 (23 Apr 2009)

  23 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +qt-opengl-4.5.1.ebuild:
  qt 4.5.1 version bump

  04 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-opengl-4.5.9999.ebuild, qt-opengl-4.9999.ebuild:
  Sync with portage packages

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> -qt-opengl-4.5.0.ebuild:
  Cleaning out 4.5.0 ebuilds that are now in portage

*qt-opengl-4.5.0 (03 Mar 2009)

  03 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-opengl-4.5.0.ebuild:
  Add 4.5.0 release ebuild for testing

*qt-opengl-4.5.9999 (06 Feb 2009)

  06 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-opengl-4.4.9999.ebuild, +qt-opengl-4.5.9999.ebuild:
  Version bump to 4.5.9999

  06 Feb 2009; Ben de Groot <yngwin@gentoo.org>
  -qt-opengl-4.5.0_beta1.ebuild:
  Remove beta ebuild, use rc1 instead

  17 Jan 2009; Ben de Groot <yngwin@gentoo.org>
  qt-opengl-4.5.0_beta1.ebuild:
  Add keywords as per 4.4.2 in official tree

  17 Jan 2009; Markos Chandras (hwoarang) <hwoarang@silverarrow.gr>
  +x11-libs/qt-opengl/qt-opengl-4.4.9999.ebuild:
  Adding qt-opengl-4.4.9999 ebuild

*qt-opengl-4.5.0_beta1 (13 Jan 2009)

  13 Jan 2009; Ben de Groot <yngwin@gentoo.org> +metadata.xml,
  +qt-opengl-4.5.0_beta1.ebuild: