@@ -1,4 +1,6 @@
-EBUILD qt-opengl-4.5.9999.ebuild 838 RMD160 c226455bb47fdc61bb87a99c556b9a29c1812e3d SHA1 26a1fbfb1c769bd94f930e8fdce3191ec0709b23 SHA256 2879507322ad645770ba2e2d6510588f6f2d762b924d1d04005676681a67e23d
-EBUILD qt-opengl-4.9999.ebuild 820 RMD160 47354eae18bc0846bff945e07a04b24082861eb2 SHA1 395dc3a271c8d838071febfda1327febcd57754b SHA256 5852465f399aaf04c595ac56ec596cc63a44d924f6ab162a9f03a853cc23a78d
-MISC ChangeLog 2051 RMD160 693a2ce69e71b45780123d5c135510c198f33324 SHA1 86d0d6929736a8130b57ec08996b1c17fd7fd142 SHA256 5b1964425c6053442c1709be16be3ec3066abb224f48a2d967534b7fa769e93f
+DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
+EBUILD qt-opengl-4.5.2-r1.ebuild 1018 RMD160 19ef21c0625005a30a8d645d150f43bc409cf4bb SHA1 f0e63384a811c57d38600e3a9238691d1942d91b SHA256 cd9f49bb74be8125e5d0e483a422f58355058d6328b2e63c81f4038f7701d61c
+EBUILD qt-opengl-4.5.9999.ebuild 873 RMD160 19126fba4aad99a8187b126a9600f5138a754122 SHA1 5de0a17c6cb0a306dc3f5679bf425f226b620ad5 SHA256 158bbaa9a3e0d14aa5b7df655cce4f9a516999f348192d43a39281383e07aee2
+EBUILD qt-opengl-4.9999.ebuild 855 RMD160 da33c03b7c3146aba33efaefeff76e7768dec54b SHA1 98bd15b459f27d7ee1376161976ddd8998561d32 SHA256 d4e8f906abe260a6b11384ac28a46962caa7a79a8641ef1182f2314837cdaf46
+MISC ChangeLog 2282 RMD160 eff6fd77567b10ffa43c0d69918422b85c0be5c5 SHA1 40518cc9dc5236d7035c4d01518d45ddbaa3c339 SHA256 16a791ce467544365ed067008d96cd6a3fbf2bec7ff03f533bf7a2575236503d
 MISC metadata.xml 241 RMD160 a4b01c7b25f020916e4b7ec0b1d494f8e2f54078 SHA1 05d7b5faaf60edc3149fd71ba64cbc577e7692a4 SHA256 e6d7a58349ce295f0397169bd553c878472d313e2b69c6a08e72f54b4a4333b0
