@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qt-opengl-4.5.2-r1 (25 Aug 2009)
+
+  25 Aug 2009; Davide Pesavento <davidepesa@gmail.com>
+  +qt-opengl-4.5.2-r1.ebuild, qt-opengl-4.5.9999.ebuild,
+  qt-opengl-4.9999.ebuild:
+  Build the opengl graphicssystem plugin (bug #281674).
+
   27 Jun 2009; Dror Levin <spatz@psybear.com> -qt-opengl-4.5.2.ebuild:
   Moved to tree.
 
